# pipecat-anam

./: .gitignore  CHANGELOG.md  LICENSE  README.md  env.example  example-anam-transport.py  example.py  example_16x9_crop.py  example_video_post_filter.py  pyproject.toml
.github/workflows/: ci.yml  release-alpha.yml  release-stable.yml
examples/: __init__.py  video-avatar-anam-postfilter.py  video-avatar-anam-transport-pcc.py  video-avatar-anam-transport.py  video-avatar-anam-video-service.py  video_post_filter.py
src/pipecat_anam/: __init__.py  transport.py  video.py
tests/: test_example_16x9_crop.py
